--- a/Proyecto/css.css
+++ b/Proyecto/css.css
@@ -1,13 +1,27 @@
-.contenido{
+.contenido {
     position: relative;
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     height: 300px;
     border: 1px solid #ccc;
-    width: 300px;
-    top:50%;
+    width: 800px;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, 100%);
 
+}
+
+.letras {
+    border: 0;
+}
+
+.sinborde {
+    border: 0;
+    outline: none;
+    text-align: center;
+    border-bottom: 1px solid black;
+    width : 100px; 
+    font-size: 55px;
+    
 }
