--- a/Proyecto/css.css
+++ b/Proyecto/css.css
@@ -4,16 +4,18 @@
     justify-content: center;
     align-items: center;
     height: 300px;
-    border: 1px solid #ccc;
+    border: 1px solid white;
     width: 800px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, 100%);
-
+    background-color: white;
 }
 
-.letras {
-    border: 0;
+.modificar {
+    text-align: center;
+    width: 100px;
+    font-size: 20px;
 }
 
 .sinborde {
@@ -24,4 +26,8 @@
     width : 100px; 
     font-size: 55px;
     
+}
+
+body{
+    background-color: #ccc;
 }
